@@ -1,4 +1,4 @@
-# $NetBSD: obsolete.mi,v 1.11.2.5 2001/06/10 12:22:14 he Exp $
+# $NetBSD: obsolete.mi,v 1.11.2.6 2002/09/11 00:07:41 itojun Exp $
 /bin/rcorder
 /dev/log
 /etc/rc.d/xntpd
@@ -9,10 +9,12 @@
 /sbin/nfsd
 /sbin/nfsiod
 /sbin/quotacheck
+/usr/bin/kf
 /usr/lib/libntp.so.0
 /usr/lib/libntp.so.0.0
 /usr/libexec/hprop
 /usr/libexec/kdc
+/usr/libexec/kfd
 /usr/sbin/dig
 /usr/sbin/dnsquery
 /usr/sbin/gettable
